# scienceBallSOTA

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  NOTICE  README.md  SECURITY.md  conftest.py  pyproject.toml
apps/agent-service/: Dockerfile  README.md  pyproject.toml
apps/agent-service/src/agent_service/: __init__.py  access.py  advisor.py  agent.py  answer_assembler.py  answer_confidence.py  answer_localization.py  answer_report_artifact.py  answer_tabs.py  answer_validator.py  answer_warning_panel.py  api_contracts.py  briefing.py  chat_session_store.py  citation_formatter.py  comparison.py  contradiction_analysis.py  contradiction_group.py  conversation_memory.py  effect_factor_attribution.py  evidence_assembler.py  fanout.py  followup_filter_carryover.py  followup_resolver.py  gap_finding.py  gap_prioritizer.py  graph_algo_plan.py  graph_topology.py  hitl_chat.py  intent_classifier.py  intent_confidence_gate.py  intent_taxonomy.py  interrupt_request.py  interrupt_stream_event.py  main.py  memory_personalization.py  memory_semantic_index.py  memory_writeback.py  node_timeline.py  numeric_constraint_relax.py  (+39 more)
apps/agent-service/tests/: test_advisor_eval.py  test_agent.py  test_answer_assembler.py  test_answer_confidence.py  test_answer_localization.py  test_answer_report_artifact.py  test_answer_tabs.py  test_answer_validator.py  test_answer_validator_h5.py  test_answer_warning_panel.py  test_api_contracts.py  test_chat_session_store.py  test_citation_formatter.py  test_contradiction_group.py  test_conversation_memory.py  test_effect_factor_attribution.py  test_evidence_assembler.py  test_followup_filter_carryover.py  test_followup_resolver.py  test_gap_finding.py  test_graph_algo_plan.py  test_graph_topology.py  test_grounding_hardening.py  test_health.py  test_intent_classifier.py  test_intent_confidence_gate.py  test_intent_taxonomy.py  test_interrupt_request.py  test_interrupt_stream_event.py  test_memory_personalization.py  test_memory_semantic_index.py  test_memory_writeback.py  test_node_timeline.py  test_numeric_constraint_relax.py  test_plan_cost_estimate.py  test_plan_router.py  test_preprocess.py  test_prompt_registry.py  test_query_approval_gate.py  test_query_normalize.py  (+33 more)
apps/api-gateway/: Dockerfile  README.md  pyproject.toml
apps/api-gateway/src/api_gateway/: __init__.py  audit.py  auth.py  auth_oidc.py  chat_attachments.py  chat_report.py  chat_session_list_item.py  chat_stream_event.py  command_palette_index.py  content_disposition.py  content_negotiation.py  contradiction_grouping.py  cors_policy.py  curation_decision.py  curation_event.py  cursor.py  decision_history_view.py  deep_researcher_runner.py  deep_search_tool.py  deps.py  document_filters.py  document_page_view.py  dod_gate.py  entity_detail_aggregates.py  envelope.py  error_catalog.py  etag.py  evidence_create_validation.py  evidence_highlight.py  evidence_pack.py  experiment_filters.py  facets.py  fact_versions_store.py  field_projection.py  gap_filter.py  gap_matrix.py  gap_research.py  graph_diff.py  graph_element_normalize.py  graph_filter_predicate.py  (+45 more)
apps/api-gateway/src/api_gateway/routers/: __init__.py  absence.py  admin.py  advise.py  agent_reasoning.py  agent_timeline.py  agent_trace.py  apples.py  (+118 more)
apps/api-gateway/tests/: test_api.py  test_auth_oidc.py  test_chat_attachments.py  test_chat_report.py  test_chat_router.py  test_chat_session_list_item.py  test_chat_stream_event.py  test_cluster_map_router.py  test_command_palette_index.py  test_community_panel.py  test_content_disposition.py  test_content_negotiation.py  test_contract.py  test_contradiction_grouping.py  test_corpus_overview.py  test_corpus_source_delete.py  test_cors_policy.py  test_coverage_dashboard_cache.py  test_curation_decision.py  test_curation_event.py  test_cursor.py  test_decision_history_view.py  test_deps.py  test_document_filters.py  test_document_page_view.py  test_e2e_golden.py  test_entity_detail_aggregates.py  test_envelope.py  test_error_catalog.py  test_etag.py  test_evidence_create_validation.py  test_evidence_highlight.py  test_experiment_filters.py  test_experiments_router.py  test_facets.py  test_field_projection.py  test_gap_filter.py  test_gap_matrix.py  test_graph_diff.py  test_graph_element_normalize.py  (+37 more)
apps/curation-service/: Dockerfile  README.md  pyproject.toml
apps/curation-service/src/curation_service/: __init__.py  curation.py  main.py
apps/curation-service/tests/: test_health.py
apps/extraction-service/: Dockerfile  README.md  pyproject.toml
apps/extraction-service/src/extraction_service/: __init__.py  main.py
apps/extraction-service/tests/: test_health.py
apps/graph-service/: Dockerfile  README.md  pyproject.toml
apps/graph-service/src/graph_service/: __init__.py  cypher_guard.py  cypher_param_lint.py  cypher_templates.py  main.py  schema_api.py
apps/graph-service/tests/: test_cypher_guard.py  test_cypher_param_lint.py  test_cypher_templates.py  test_health.py  test_schema_api.py
apps/ingestion-service/: Dockerfile  README.md  pyproject.toml
apps/ingestion-service/src/ingestion_service/: __init__.py  artifact_reconcile.py  batch_ingest_report.py  chunker.py  cli.py  elabftw_metadata.py  er_step.py  fallback_parsers.py  ingest_stages.py  lab_import.py  main.py  ocr_branch.py  openbis_hierarchy.py  parse_manifest.py  parser_priority.py  parser_protocol.py  parsers.py  pipeline.py  source_version.py
apps/ingestion-service/tests/: test_artifact_reconcile.py  test_batch_ingest_report.py  test_compose_config.py  test_dagster_definitions.py  test_elabftw_metadata.py  test_health.py  test_ingest_stages.py  test_ingestion.py  test_lab_import.py  test_openbis_hierarchy.py  test_parse_manifest.py  test_parser_priority.py  test_parser_protocol.py  test_prose_observation_gate.py  test_source_version.py  test_value_present_mentions.py
apps/search-service/: Dockerfile  README.md  pyproject.toml
apps/search-service/src/search_service/: __init__.py  main.py
apps/search-service/tests/: test_health.py
(+235 files in other folders)
