[project]
name = "science-ball"
version = "0.1.0"
description = "SOTA Knowledge Graph — «Научный клубок»: R&D knowledge map for mining & metallurgy."
requires-python = ">=3.12"
readme = "README.md"
license = { text = "Apache-2.0" }
dependencies = []

[tool.uv]
package = false
# fastembed pulls tokenizers (>=0.15,<1.0) and would resolve to 0.23.1, but the
# `transformers` runtime used by the IBM-granite sentence-transformers embedding
# backend enforces tokenizers<=0.23.0 at import time. 0.23.0 was never published,
# so pin to the newest compatible release (0.22.2) — satisfies both.
constraint-dependencies = ["tokenizers>=0.22,<=0.23.0"]

[tool.uv.workspace]
members = ["packages/*", "apps/*"]
exclude = ["apps/frontend"]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "types-pyyaml>=6.0",
    "types-requests>=2.32",
]

# ---------------------------------------------------------------------------
# Ruff — lint + format (replaces black/isort)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["apps", "packages"]
extend-exclude = ["third_party", "**/generated", "var", "**/.venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["N818", "B008", "RUF001", "RUF002", "RUF003", "RUF022"]  # FastAPI Depends() defaults; cyrillic look-alikes; keep grouped __all__

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["S101", "N802"]
"scripts/*" = ["T201", "C408", "E501", "N812"]

[tool.ruff.lint.isort]
known-first-party = ["kg_common", "kg_schema", "kg_extractors", "kg_retrievers", "kg_eval"]

[tool.ruff.format]
quote-style = "double"

# ---------------------------------------------------------------------------
# Mypy — static typing
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
namespace_packages = true
explicit_package_bases = true
ignore_missing_imports = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = false
exclude = ['third_party/', 'generated/', 'var/', '\.venv']

[tool.pydantic-mypy]
init_forbid_extra = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
module = ["neo4j.*", "kuzu.*", "qdrant_client.*", "fastembed.*", "gliner.*", "pymatgen.*",
          "splink.*", "haystack.*", "llama_index.*", "rank_bm25.*", "pdfplumber.*",
          "pptx.*", "docx.*", "pint.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest / coverage
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["packages", "apps"]
addopts = "-ra --strict-markers --import-mode=importlib"
asyncio_mode = "auto"
markers = [
    "unit: fast isolated unit tests",
    "integration: tests that touch stores/LLM",
    "slow: long-running tests",
    "llm: tests that call the OpenRouter LLM (need OPENROUTER_API_KEY)",
]

[tool.coverage.run]
source = ["apps", "packages"]
omit = ["*/tests/*", "*/__init__.py", "*/generated/*"]

[tool.coverage.report]
fail_under = 55
show_missing = true
