[project]
name = "api-gateway"
version = "0.1.0"
description = "FastAPI API gateway: query/graph/search/evidence/export/admin endpoints."
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "kg-common",
    "kg-schema",
    "kg-retrievers",
    "kg-extractors",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "xlsxwriter>=3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api_gateway"]

[tool.uv.sources]
kg-common = { workspace = true }
kg-schema = { workspace = true }
kg-retrievers = { workspace = true }
kg-extractors = { workspace = true }
