[project]
name = "curation-service"
version = "0.1.0"
description = "Curation workflow, decision history, expert edits, review queue."
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "kg-common",
    "kg-schema",
    "kg-retrievers",
    "kuzu>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/curation_service"]

[tool.uv.sources]
kg-common = { workspace = true }
kg-schema = { workspace = true }
kg-retrievers = { workspace = true }
