[project]
name = "extraction-service"
version = "0.1.0"
description = "Extraction orchestration worker (rules + LLM + normalization + ER)."
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "kg-common",
    "kg-schema",
    "kg-extractors",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/extraction_service"]

[tool.uv.sources]
kg-common = { workspace = true }
kg-schema = { workspace = true }
kg-extractors = { workspace = true }
