[project]
name = "graph-service"
version = "0.1.0"
description = "Kuzu-backed graph store: schema/migrations, deterministic upsert, Cypher templates."
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "kg-common",
    "kg-schema",
    "kuzu>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/graph_service"]

[tool.uv.sources]
kg-common = { workspace = true }
kg-schema = { workspace = true }
