[project]
name = "ingestion-service"
version = "0.1.0"
description = "Document ingestion: parse PDF/DOCX/PPTX/XLSX, chunk, orchestrate extraction+upsert."
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "kg-common",
    "kg-schema",
    "kg-extractors",
    "kg-retrievers",
    "pypdf>=4.2",
    "pdfplumber>=0.11",
    "python-docx>=1.1",
    "python-pptx>=0.6",
    "openpyxl>=3.1",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ingestion_service"]

[tool.uv.sources]
kg-common = { workspace = true }
kg-schema = { workspace = true }
kg-extractors = { workspace = true }
kg-retrievers = { workspace = true }
